<resources>
    <string name="app_name">DaNangTravelGuide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_discovery">Discovery</string>
    <string name="menu_messenger">Messenger</string>
    <string name="menu_user">User</string>

    <string name="home_second">Home Second</string>
    <string name="todo">TODO</string>
    <string name="more">more</string>
    <string name="action_search">Search</string>
    <string name="notification">Notification</string>
    <string name="individual">Individual</string>
    <string name="logout">Logout</string>
    <string name="login">LOGIN</string>
    <string name="tag">tag</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="danang_travel_guide">DaNang Travel Guide</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="fb_com_ngthmyha412">fb.com/ngthmyha412</string>
    <string name="nguy_n_m_h">Nguyễn M.Hà</string>
    <string name="app_reading">App Reading</string>
    <string name="c_truy_n">ĐỌC TRUYỆN</string>
    <string name="ch_ng_1">Chương 1</string>
</resources>
