<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:title="@string/todo">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_home"
                        android:icon="@drawable/ic_baseline_home_24"
                        android:enabled="true"
                        android:title="@string/menu_home" />
                    <item
                        android:id="@+id/nav_discovery"
                        android:icon="@drawable/ic_baseline_view_list_24"
                        android:title="@string/menu_discovery" />
                    <item
                        android:id="@+id/nav_notification"
                        android:icon="@drawable/ic_baseline_notifications_24"
                        android:title="@string/notification" />
                    <item
                        android:id="@+id/nav_individual"
                        android:icon="@drawable/ic_baseline_person_24"
                        android:title="@string/individual" />
                </group>
            </menu>
        </item>
        <item android:title="@string/individual">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_login"
                        android:icon="@drawable/ic_baseline_power_settings_new_24"
                        android:title="@string/logout" />
                </group>
            </menu>
        </item>
    </group>
</menu>
